farmOverflow: fix some input label not centering vertically.

--- a/src/modules/farm_overflow/assets/style.less
+++ b/src/modules/farm_overflow/assets/style.less
@@ -5,9 +5,10 @@
         }
         
         input.textfield-border {
-            padding-top: 6px;
             width: 219px;
             height: 34px;
+            margin-bottom: 2px;
+            padding-top: 2px;
         }
 
         input.textfield-border.fit {
@@ -16,6 +17,14 @@
 
         span.select-wrapper {
             width: 219px;
+        }
+
+        a.select-handler {
+            line-height: 28px;
+        }
+
+        td.snowflake a.select-handler {
+            line-height: 31px;
         }
 
         .range-container {
